update to site 2 times on 7-16

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="index.html" class="logo">Kona Coffee <span> 100% Real</span></a>
             <a href="#" class="menu-action res-open">+</a>
             <ul class="list-inline"><!-- Main Menu Start -->
-                <li><a href="sidebar-left.html">Little bits of Knoa</a></li>
+                <li><a href="sidebar-left.html">Little bits of Kona</a></li>
                 <li><a href="sidebar-right.html">History of Kona Coffee</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li class="active"><a class="border-blue" href="contact.html">Contact</a></li>
