--- a/sidebar-left.html
+++ b/sidebar-left.html
@@ -41,8 +41,8 @@
         <div class="single-inner clearfix">
             
             <div class="single-heading">
-                <h1 class="single-title">Kona Coffee Grows in the Knoa regions of Big Island Hawaii</h1>
-                <div class="single-meta"><span>Posted:</span> 2 Hours Ago in <a href="#">News</a></div>
+                <h1 class="single-title">Kona Coffee Grows in the Kona regions of Big Island Hawaii</h1>
+                <div class="single-meta"><span></span><a href="#"></a></div>
             </div>
             
             <div class="single-page"><!-- Single Content Start -->
